Fix: display issue for cut off pages during selection

--- a/src/styles/isomer-cms/elements/base.scss
+++ b/src/styles/isomer-cms/elements/base.scss
@@ -39,6 +39,10 @@ a{
 .fullscreenWrapper {
   @extend .wrapper;
   top: $header-height/2;
+
+  > .wrappedContent {
+    height: calc(100vh - #{$header-height} - #{$footer-height});
+  }
 }
 
 h1,h2,h3,h4,h5,h6{
